k3s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: cloud-virt
  labels:
    app: worker
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret

      containers:
        - name: worker
          image: ghcr.io/j33r0/projet-cloud-virt/api:latest
          command: ["uv", "run", "--no-dev", "celery", "--app", "image_api.worker.app", "worker", "--loglevel=info"]
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
